...
          Icons.videocam,
          key: ValueKey('nav.game.scenes'),
        ),
        label: Text(l10n.gameScenes),
      ),
      NavigationRailDestination(
        icon: const Icon(Icons.person_outlined, key: ValueKey('nav.game.npcs')),
        selectedIcon: const Icon(Icons.person, key: ValueKey('nav.game.npcs')),
        label: Text(l10n.gameNpcs),
      ),
      NavigationRailDestination(
        icon: const Icon(
          Icons.library_books_outlined,
...
